--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.4.1",
     "react-color": "^2.14.1",
     "react-dom": "^16.4.1",
+    "react-loader": "^2.4.5",
     "react-redux": "^5.0.7",
     "react-responsive-carousel": "^3.1.41",
     "react-scripts": "1.1.4",
