--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^1.4.1",
     "axios": "^0.18.0",
     "boostrap": "^2.0.0",
+    "detect-browser": "^3.0.0",
     "html2canvas": "^1.0.0-alpha.12",
     "react": "^16.4.1",
     "react-color": "^2.14.1",
